--- a/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
@@ -129,9 +129,9 @@
 	
 	\subsection{DNA damages in the IDR as a function of the UV dose}\label{subsection:AccumulationOfDNADamagesInTheIDR}
 	We assume that the rate of accumulation of DNA damages in the
-	$A_0(u)$ with increasing UV dose is proportional to the undamaged DNA in $A_0(u)$ [REF]. Therefore,	
+	$A_0$ with increasing UV dose is proportional to the undamaged DNA in $A_0$ [REF]. Therefore,	
 	\begin{equation}\label{eq:DNADamageRate}
-	\frac{dT(u)}{du} = k_t(c_dA_0(u) - T(u))
+	\frac{dT(u)}{du} = k_t(c_dA_0 - T(u))
 	\end{equation}	
 	with $k_t$ a constant. Using the initial condition $T(0) = 0$, the solution to equation \eqref{eq:DNADamageRate} is
 	\begin{equation}\label{eq:DNADamagedIDR}
